# SighthoundVideo

./: .gitattributes  .gitignore  Alt_Keymap.txt  COPYING  CodeResources.plist  DEBUGGING  FrontEndLaunchpad.py  Makefile  PackageSources.py  README.md  README_OSS.md  app  buildSV.sh  renameSentryMac.sh  run  setupEnvironment
appCommon/: CommonStrings.py  ConfigBitmapWindow.py  DbRecovery.py  DebugPrefs.py  LicenseUtils.py  SearchUtils.py  TimingInfo.py  XmlRpcClientIdWrappers.py
backEnd/: BackEnd.py  BackEndApp.py  BackEndPrefs.py  BackEndProcessJumper.py  CameraCapture.py  CameraManager.py  ClipManager.py  ClipUploader.py  DataManager.py  DebugLogManager.py  DiskCleaner.py  LicenseManagerOSS.py  MessageIds.py  NetworkMessageServer.py  NetworkScanner.py  ObjectDetectorClient.py  PacketCaptureStream.py  PlatformHTTPWrapper.py  QueuedDataManagerCloud.py  RealTimeRule.py  ResponseDbManager.py  ResponseRunner.py  SavedQueryDataModel.py  TestStream.py  VideoMarkupModel.py  VideoPipeline.py  WebServer.py  webstuff.py
config/: pipeline.yaml
fonts/: InconsolataLicense.txt
frontEnd/: AboutBox.py  ArmCameras.py  BackEndClient.py  BaseView.py  CameraSetupWizard.py  CameraTable.py  DbCorruptedDialog.py  DeleteClipDialog.py  EmailSetupDialog.py  ExportClipsDialog.py  ExportClipsProgDialog.py  FrontEnd.mk  FrontEnd.py  FrontEndApp.py  FrontEndEvents.py  FrontEndFrame.py  FrontEndPrefs.py  FrontEndUtils.py  FtpSetupDialog.py  FtpStatusDialog.py  GetLaunchParameters.py  GridView.py  LegacyBanner.py  LicenseDialog.py  LicensingHelpers.py  LocateVideoDialog.py  LoginDialog.py  LookForList.py  MakeDocUrl.py  MenuIds.py  MonitorView.py  MoveVideoDialog.py  OptionsDialog.py  PacketCaptureDialog.py  QueryConstructionView.py  QueryEditorDialog.py  RemoveCameraDialog.py  RenameCameraDialog.py  RuleListPanel.py  RuleScheduleDialog.py  (+14 more)
icons/: InstallerIcon-mac.icns  SmartVideoApp.icns
launch/: CMakeLists.txt  Launch.py  clean.cmd  launch.c
launch/shlaunchMac/: com.sighthound.video.launch.plist  launch_test.c
launch/shlaunchMac/shlaunchMac/: shlaunch.c  shlaunch.h  shlaunchMac.1
launch/shlaunchMac/shlaunchMac.xcodeproj/: project.pbxproj
launch/shlaunchWin/shlaunch/: manifest.xml  resource.h  shlaunch.c  shlaunch.h  shlaunch.rc
launch/shlaunchWin/shlaunch_test/: shlaunch_test.c
launch/shsudoMac/shsudoMac/shsudoMac/: shsudo.m
launch/shsudoMac/shsudoMac/shsudoMac.xcodeproj/: project.pbxproj
mac/: libs.tgz  tools.tgz
scripts/: TimeframeSearch.py  buildMacosUpdaterApp.sh  createDmg.sh  deployOSS.sh  fixRPath.sh  genBuildTimeStamp.sh  generateHashes.py  generateShsudoHeader.sh  getRevision.sh  notarizeMacosApp.sh  testDetections.py  (+2 more)
vitaToolbox/path/: CMakeLists.txt  FileCreationTime.py  GetDiskSpaceAvailable.py  PathUtils.py  RecursiveListDir.py  VolumeUtils.py
vitaToolbox/path/srcMac/: volumeUtils.c  volumeUtils.m
xnat/: CMakeLists.txt  minidump.c  miniupnpcstrings.h  portcheck.php  portcheck_log_metrics.py  resource.h  xnat.c  xnat.py  xnat.rc
(+147 files in other folders)
